# auraedu

./: .dockerignore  .editorconfig  .gitignore  .golangci.yml  .prettierignore  .spectral.yaml  .tool-versions  AGENTS.md  AuraEDU_Microservices_Multi_Tenant_SaaS_Specification.docx  AuraEDU_Microservices_Multi_Tenant_SaaS_Specification.md  BRAND.md  CLAUDE.md  DESIGN_SYSTEM.md  Makefile  README.md  agent_plan.md  design-qa.md  eas.json  eslint.config.mjs  go.work  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  render.yaml  renovate.json  tsconfig.base.json  turbo.json
.changeset/: README.md
.github/: CODEOWNERS
.github/workflows/: changeset.yml  ci.yml  contracts.yml  docker.yml  feature-flags.yml  go.yml  isolation.yml  migrations.yml  observability.yml  performance.yml  python.yml  security.yml  web.yml
.lint-logs/: run_platform.sh
apps/academic-service/: Dockerfile  README.md  go.mod
apps/admissions-service/: Dockerfile  README.md  go.mod
apps/ai-orchestrator-service/: Dockerfile  README.md  go.mod
apps/ai-prediction-service/: Dockerfile  README.md  pyproject.toml
apps/ai-prediction-service/migrations/: 0001_predictions_rls.sql  0002_transactional_outbox.sql  0003_timezone_aware_timestamps.sql
apps/ai-prediction-service/src/ai_prediction_service/: config.py  db.py  feature_flags.py  learner_scope.py  main.py  migrate.py  models.py  schemas.py
apps/ai-prediction-service/src/ai_prediction_service/api/: dependencies.py  routes.py
apps/ai-prediction-service/src/ai_prediction_service/domain/: engine.py
apps/ai-prediction-service/src/ai_prediction_service/events/: envelope.py  outbox.py  publisher.py  subscriber.py  transport.py
apps/ai-prediction-service/test_ai_prediction/: conftest.py  test_api.py  test_config.py  test_engine.py  test_event_envelope.py  test_events.py  test_feature_flags.py  test_observability.py  test_subscriber.py  test_transport.py
apps/ai-recommendation-service/: Dockerfile  README.md  pyproject.toml
apps/ai-recommendation-service/migrations/: 0001_recommendations_rls.sql  0002_transactional_outbox.sql  0003_timezone_aware_timestamps.sql
apps/ai-recommendation-service/src/ai_recommendation_service/: config.py  db.py  feature_flags.py  learner_scope.py  main.py  migrate.py  models.py  observability.py
apps/ai-recommendation-service/src/ai_recommendation_service/api/: dependencies.py  routes.py
apps/ai-recommendation-service/src/ai_recommendation_service/domain/: engine.py
apps/ai-recommendation-service/src/ai_recommendation_service/events/: publisher.py  subscriber.py
apps/ai-recommendation-service/tests/: conftest.py  test_config.py  test_event_envelope.py  test_feature_flags.py  test_health.py  test_observability.py  test_postgres_rls.py  test_recommendations.py  test_subscriber.py
apps/analytics-service/: Dockerfile  README.md  go.mod  go.sum
apps/api-gateway/: Dockerfile  README.md  go.mod  go.sum
apps/assessment-service/: Dockerfile  README.md  go.mod
apps/attendance-service/: Dockerfile  go.mod  (+1 more)
apps/career-guidance-service/: Dockerfile  README.md  pyproject.toml
apps/career-guidance-service/migrations/: 0001_guidance_rls.sql  0002_transactional_outbox.sql  0003_timezone_aware_timestamps.sql
apps/career-guidance-service/src/career_guidance_service/: config.py  db.py  feature_flags.py  learner_scope.py  main.py  migrate.py  models.py  schemas.py
apps/career-guidance-service/src/career_guidance_service/api/: dependencies.py  routes.py
apps/career-guidance-service/src/career_guidance_service/domain/: engine.py
apps/career-guidance-service/src/career_guidance_service/events/: outbox.py  publisher.py  subscriber.py  transport.py
apps/career-guidance-service/test_career_guidance/: conftest.py  test_api.py  test_config.py  test_event_envelope.py  test_feature_flags.py  test_observability.py  test_subscriber.py  test_transport.py
contracts/: README.md
deploy/: README.md  docker-compose.infra.yml  docker-compose.yml  postgres-init.sql
docs/: README.md  SUMMARY.md
performance/: README.md
platform/: go.mod  go.sum
tools/: __init__.py  generate-brand-assets.mjs
(+1491 files in other folders)
