[project]
name = "auraedu-ai-prediction-service"
version = "0.1.0"
description = "AuraEDU ai-prediction-service (FastAPI). Scaffold — implemented in Sprint 5 (EP-30/31/32)."
requires-python = ">=3.13"
dependencies = ["fastapi", "uvicorn"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
