[project]
name = "auraedu-ai-prediction-service"
version = "0.1.0"
description = "AuraEDU AI Prediction Service (FastAPI). EP-31: risk & performance predictions with explainability."
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "pydantic-settings",
    "nats-py",
    "greenlet",
    "pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_prediction_service"]
