[project]
name = "auraedu-ai-recommendation-service"
version = "0.1.0"
description = "AuraEDU AI Recommendation Service (FastAPI). EP-30: learning recommendations, teacher approval, explainability."
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "pydantic-settings",
    "nats-py",
    "greenlet",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "aiosqlite"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_recommendation_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
