[project]
name = "auraedu-career-guidance-service"
version = "0.1.0"
description = "AuraEDU career-guidance-service (FastAPI). Scaffold — implemented in Sprint 5 (EP-30/31/32)."
requires-python = ">=3.13"
dependencies = ["fastapi", "uvicorn"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auraedu_career_guidance_service"]
