[project]
name = "auraedu-career-guidance-service"
version = "0.1.0"
description = "AuraEDU Career Guidance Service (FastAPI). EP-32: career path and course recommendations."
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "pydantic-settings",
    "nats-py",
    "greenlet",
    "pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/career_guidance_service"]
